--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7014,7 +7014,7 @@ button.bg-dark:focus {
   color: #fff !important; }
 
 .text-primary {
-  color: #007bff !important; }
+  color: #BE8C29 !important; }
 
 a.text-primary:hover, a.text-primary:focus {
   color: #0056b3 !important; }
