--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 /******* Bootstrap Theming ********/
 
-$primary: #7AB730;
+$primary: #BE8C29;
 $secondary: lighten($primary, 50%);
 $light: #FFFFFF;
 $dark: #212121;
