--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -387,7 +387,18 @@ mark,
 
 .img-fluid {
   max-width: 100%;
+  height: auto;
+  width: 100%;
   height: auto; }
+  @media (min-width: 768px) {
+    .img-fluid {
+      height: 180px; } }
+  @media (min-width: 1199px) {
+    .img-fluid {
+      height: 250px; } }
+  @media (min-width: 1400px) {
+    .img-fluid {
+      height: 300px; } }
 
 .img-thumbnail {
   padding: 0.25rem;
@@ -7014,7 +7025,7 @@ button.bg-dark:focus {
   color: #fff !important; }
 
 .text-primary {
-  color: #BE8C29 !important; }
+  color: #007bff !important; }
 
 a.text-primary:hover, a.text-primary:focus {
   color: #0056b3 !important; }
