--- a/scss/bootstrap/scss/_images.scss
+++ b/scss/bootstrap/scss/_images.scss
@@ -7,6 +7,20 @@
 // See also https://github.com/twbs/bootstrap/issues/18178
 .img-fluid {
   @include img-fluid();
+  width: 100%;
+  height:auto;
+
+  @media(min-width: 768px){
+    height: 180px;
+  }
+
+  @media(min-width: 1199px){
+    height: 250px;
+  }
+
+  @media(min-width: 1400px){
+    height: 300px;
+  }
 }
 
 
