--- a/css/style.css
+++ b/css/style.css
@@ -7092,6 +7092,9 @@ h6,
 .contacto {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/contacto.webp), no-repeat center center; }
 
+.mochileros {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/mochileros.jpg), no-repeat center center; }
+
 .page-header {
   background-size: cover; }
 
