--- a/scss/style.scss
+++ b/scss/style.scss
@@ -148,6 +148,9 @@ h6,
 
 }
 
+.mochileros{
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/mochileros.jpg), no-repeat center center;}
+
 .page-header {
     background-size: cover;
 }
