--- a/scss/style.scss
+++ b/scss/style.scss
@@ -144,12 +144,12 @@ h6,
 }
 
 .contacto{
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/contacto.webp), no-repeat center center;
-
-}
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/contacto.webp), no-repeat center center;}
 
 .mochileros{
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/mochileros.jpg), no-repeat center center;}
+.cumpleaños{
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/cumpleaños.jpeg), no-repeat center center;}
 
 .page-header {
     background-size: cover;
