--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /******* Bootstrap Theming ********/
 /*!
  * Bootstrap v4.5.3 (https://getbootstrap.com/)
@@ -7094,6 +7095,9 @@ h6,
 
 .mochileros {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/mochileros.jpg), no-repeat center center; }
+
+.cumpleaños {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/cumpleaños.jpeg), no-repeat center center; }
 
 .page-header {
   background-size: cover; }
