--- a/scss/bootstrap/scss/_images.scss
+++ b/scss/bootstrap/scss/_images.scss
@@ -19,8 +19,27 @@
   }
 
   @media(min-width: 1400px){
+    height: 270px;
+  }
+}
+
+.img-home{
+  
+  width: 100%;
+  height:auto;
+
+  @media(min-width: 768px){
+    height: 180px;
+  }
+
+  @media(min-width: 1199px){
+    height: 250px;
+  }
+
+  @media(min-width: 1400px){
     height: 300px;
   }
+
 }
 
 
