--- a/scss/style.scss
+++ b/scss/style.scss
@@ -88,13 +88,15 @@ h6,
     outline: none;
 }
 
+
+
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
     color: $primary;
 }
 
 @media (max-width: 991.98px) {
-    .navbar-light .navbar-nav .nav-link  {
+    .navbar-light .navbar-nav .nav-link .nav-link--cumpleaños {
         padding: 10px 15px;
     }
 }
@@ -152,9 +154,15 @@ h6,
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/cumpleaños.jpeg), no-repeat center center;}
 .lgbt{
         background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/lgbt.jpg), no-repeat center center;}
+
+.mujeres{
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/package-6.jpg), no-repeat center center;}
+.teen{
+                background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/niños.jpg), no-repeat center center;}
 .five{
         background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/+50.jpg), no-repeat center center;}
-
+.teen{
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/niños.jpg), no-repeat center center;}
 .page-header {
     background-size: cover;
 }
